# rust_ESP32-C3

./: Cargo.toml  README.md
.cargo/: config.toml
a1_blinky/: Cargo.toml  README.md
a1_blinky/examples/: timer_blinky.rs
a2_button_blinky/: Cargo.toml  README.md
a2_button_blinky/examples/: measure_loop_timer.rs
a2_button_blinky/src/: main.rs
a3_press_counter/: Cargo.toml  README.md
a3_press_counter/src/: main.rs
a4_pir_sensor/: Cargo.toml  README.md
a4_pir_sensor/src/: main.rs
a_blinky/: Cargo.toml
a_blinky/src/: main.rs
b1_voltmeter/: Cargo.toml  README.md
b1_voltmeter/examples/: vol_ctrl_dial.rs
b1_voltmeter/src/: main.rs
b2_ntc_sensor/: Cargo.toml  README.md
b2_ntc_sensor/examples/: blinky_temp_read.rs  temp_led_array.rs
b2_ntc_sensor/src/: main.rs
b3_joystick/: Cargo.toml  README.md
b3_joystick/src/: main.rs
b4_ldr/: Cargo.toml  README.md
b4_ldr/examples/: light_up.rs
b4_ldr/src/: main.rs
c1_real_timer/: Cargo.toml  README.md
c1_real_timer/examples/: complete_timer.rs
c1_real_timer/src/: main.rs
c2_whack_a_mole/: Cargo.toml  README.md
c2_whack_a_mole/src/: main.rs
d1_led_fading/: Cargo.toml  README.md
d1_led_fading/examples/: output_delay.rs  without_delay.rs
d1_led_fading/src/: main.rs
d2_servo_motor/: Cargo.toml  README.md
d2_servo_motor/src/: main.rs
d3_potentiometer_led/: Cargo.toml  README.md
d3_potentiometer_led/src/: main.rs
d4_buzzer/: Cargo.toml
d4_buzzer/src/: main.rs
e1_uart_print/: Cargo.toml  README.md
e1_uart_print/examples/: bit_banging.rs
e1_uart_print/src/: main.rs
e2_rtc/: Cargo.toml  README.md
e2_rtc/examples/: less_verbose.rs  less_verbose_timer_interrupt.rs
e2_rtc/src/: main.rs
z1_embassy_blink/: Cargo.toml
z1_embassy_blink/src/: main.rs
z2_embassy_timer/: Cargo.toml
z2_embassy_timer/src/: main.rs
z3_embassy_led_cycling/: Cargo.toml  README.md
z3_embassy_led_cycling/src/: main.rs
z4_embassy_uart_echo/: Cargo.toml
z4_embassy_uart_echo/src/: main.rs
z5_embassy_click_counter/: Cargo.toml
z5_embassy_click_counter/src/: main.rs
