[workspace]
members = [
    "a1_blinky",
    "a2_button_blinky",
    "a3_press_counter",
    "a4_pir_sensor",
    "b1_voltmeter",
    "b2_ntc_sensor",
    "b3_joystick",
    "b4_ldr",
    "c1_real_timer",
    "c2_whack_a_mole",
    "d1_led_fading",
    "d2_servo_motor",
    "d3_potentiometer_led",
    "d4_buzzer",
    "e1_uart_print",
    "e2_rtc",
]
resolver = "2"
