[workspace]
members = [
    "a1_blinky",
    "a2_button_blinky",
    "a3_press_counter",
    "a4_pir_sensor",
    "b1_voltmeter",
    "b2_ntc_sensor",
    "b3_joystick",
    "b4_ldr",
    "c1_real_timer",
    "c2_whack_a_mole",
    "d1_led_fading",
    "d2_servo_motor",
    "d3_potentiometer_led",
    "d4_buzzer",
    "e1_uart_print",
    "e2_rtc",
    "z1_embassy_blink",
    "z2_embassy_timer",
    "z3_embassy_led_cycling",
    "z4_embassy_uart_echo",
]
resolver = "2"

[workspace.dependencies]
esp-hal = { version = "1.0.0-beta.0", features = ["esp32c3", "unstable"] }
