[package]
name = "b1_voltmeter"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-hal = { workspace = true }
esp-backtrace = { version = "0.15.0", features = [
    "esp32c3",
    "panic-handler",
    "println",
] }
esp-println = { version = "0.13.0", features = ["esp32c3", "log"] }
log = { version = "0.4.22" }
