[package]
name = "e1_uart_print"
version = "0.1.0"
edition = "2024"

[dependencies]
critical-section = "1.2.0"
esp-hal = { version = "0.23.1", features = ["esp32c3"] }
esp-backtrace = { version = "0.15.0", features = [
    "esp32c3",
    "panic-handler",
    "println",
] }
esp-println = { version = "0.13.0", features = ["esp32c3", "log"] }
log = { version = "0.4.22" }