[package]
name = "e2_rtc"
version = "0.1.0"
edition = "2024"

[dependencies]
critical-section = "1.2.0"
esp-backtrace = { version = "0.15.1", features = [
    "esp32c3",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.23.1", features = ["esp32c3"] }
esp-println = { version = "0.13.1", features = ["esp32c3", "log"] }
log = "0.4.27"
nobcd = "0.2.0"
