[package]
name = "z4_embassy_uart_echo"
version = "0.1.0"
edition = "2024"

[dependencies]
esp-backtrace = { version = "0.15.0", features = [
    "esp32c3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "1.0.0-beta.0", features = ["esp32c3", "unstable"] }
esp-println = { version = "0.13.0", features = ["esp32c3", "log"] }
log = { version = "0.4.20" }
esp-hal-embassy = { version = "0.7.0", features = ["esp32c3"] }
embassy-executor = { version = "0.7.0", features = ["task-arena-size-40960"] }
embassy-time = "0.4.0"
embassy-sync = "0.6.0"